set reset game by reload function, set the color visualization of the game

--- a/index.html
+++ b/index.html
@@ -8,6 +8,17 @@
     <title>Etch a Sketch Project</title>
 </head>
 <body>
+    <div class="header">
+        <div class="container">
+            <button class="start-painting">Start painting</button>
+            <h1 class="title">EASY SKETCH GAME</h1>
+        </div>
+    </div>
+
+    <div class="reload">
+        <button class="btn-reload">Reset Game</button>
+    </div>
+
     <div id="container">
         
     </div>
