Added buttons for change blck painting to color painting, added reset button to make canvas empty

--- a/index.html
+++ b/index.html
@@ -10,13 +10,14 @@
 <body>
     <div class="header">
         <div class="container">
-            <button class="start-painting">Start painting</button>
             <h1 class="title">EASY SKETCH GAME</h1>
         </div>
     </div>
 
     <div class="reload">
-        <button class="btn-reload">Reset Game</button>
+        <button class="black-paint">Black painting</button>
+        <button class="btn-colors">Color painting</button>
+        <button class="btn-reset">Reset</button>
     </div>
 
     <div id="container">
