Add comment to script

--- a/index.html
+++ b/index.html
@@ -20,9 +20,7 @@
         <button class="btn-reset">Reset</button>
     </div>
 
-    <div id="container">
-        
-    </div>
+    <div id="container"></div>
 
     
 <script src="script.js"></script>
