--- a/index.html
+++ b/index.html
@@ -4,13 +4,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=VT323&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/fff46afff1.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css" />
     <title>Etch a Sketch Project</title>
 </head>
 <body>
     <div class="header">
         <div class="container">
-            <h1 class="title">EASY SKETCH GAME</h1>
+            <h1 class="title"><i class="fa-sharp fa-solid fa-pen-to-square"></i> EASY SKETCH GAME</h1>
         </div>
     </div>
 
